tests/kyverno-policies/add-pvc-service-account/pvc-webservice.yaml
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-scratch
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
    osc.edu/service-account-uid: '1000'
    osc.edu/service-account-gid: '1001'
    osc.edu/home: project/test
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-scratch
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-home
  namespace: webservice
  annotations:
    osc.edu/service-account-uid: '1000'
    osc.edu/service-account-gid: '1001'
    osc.edu/home: project/test
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-home
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-namespace
  namespace: webservice2
  annotations:
    osc.edu/fileset: user-test-fileset
    osc.edu/service-account-uid: '1000'
    osc.edu/service-account-gid: '1001'
    osc.edu/home: project/test
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
