tests/kyverno-policies/add-pvc-service-account/resources.yaml
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-scratch
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
    osc.edu/home: foo
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-scratch
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-home
  namespace: webservice
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-home
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-pass-storageclass
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-path
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-namespace
  namespace: webservice2
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-scratch
  namespace: paas
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-scratch
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-home
  namespace: paas
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-home
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-pass-storageclass
  namespace: paas
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-path
