tests/kyverno-policies/add-pvc-service-account/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-pvc-service-account
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: add-pvc-service-account
    rule: pvc-add-service-account-webservice
    resources:
      - pvc-webservice-scratch
      - pvc-webservice-home
      - pvc-webservice-namespace
    patchedResources: pvc-webservice.yaml
    kind: PersistentVolumeClaim
    result: pass
  - policy: add-pvc-service-account
    rule: pvc-add-service-account-webservice
    resources:
      - pvc-webservice-pass-storageclass
    kind: PersistentVolumeClaim
    result: skip
  - policy: add-pvc-service-account
    rule: pvc-add-service-account-paas
    resources:
      - pvc-paas-scratch
      - pvc-paas-home
    patchedResources: pvc-paas.yaml
    kind: PersistentVolumeClaim
    result: pass
  - policy: add-pvc-service-account
    rule: pvc-add-service-account-paas
    resources:
      - pvc-paas-pass-storageclass
    kind: PersistentVolumeClaim
    result: skip
